--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,9 @@
         <spring-boot-version>3.0.5</spring-boot-version>
         <spring-version>6.0.8</spring-version>
         <spring-cloud-version>4.0.0</spring-cloud-version>
-        <tomcat-version>9.0.69</tomcat-version>
+        <tomcat-version>10.1.7</tomcat-version>
         <jackson-version>2.14.0</jackson-version>
-        <dubbo-version>3.1.6</dubbo-version>
+        <dubbo-version>3.2.0-beta.6</dubbo-version>
         <common-version>1.0.0-SNAPSHOT</common-version>
     </properties>
 
@@ -79,7 +79,6 @@
                 <scope>runtime</scope>
             </dependency>
             <!-- tomcat -->
-            <!--
             <dependency>
                 <groupId>org.apache.tomcat.embed</groupId>
                 <artifactId>tomcat-embed-core</artifactId>
@@ -100,7 +99,6 @@
                 <artifactId>tomcat-embed-websocket</artifactId>
                 <version>${tomcat-version}</version>
             </dependency>
-            -->
             <!-- spring -->
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -162,18 +160,18 @@
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus</artifactId>
-                <version>3.5.1</version>
+                <version>3.5.3.1</version>
             </dependency>
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-annotation</artifactId>
-                <version>3.5.1</version>
+                <version>3.5.3.1</version>
             </dependency>
-            <!-- javax -->
+            <!-- jakarta -->
             <dependency>
-                <groupId>javax.annotation</groupId>
-                <artifactId>javax.annotation-api</artifactId>
-                <version>1.3.2</version>
+                <groupId>jakarta.annotation</groupId>
+                <artifactId>jakarta.annotation-api</artifactId>
+                <version>2.1.1</version>
             </dependency>
             <!-- apache -->
             <dependency>
@@ -190,12 +188,17 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>1.7.5</version>
+                <version>2.0.7</version>
             </dependency>
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-core</artifactId>
-                <version>1.2.9</version>
+                <version>1.4.6</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>1.4.6</version>
             </dependency>
             <!-- jackson -->
             <dependency>
@@ -265,11 +268,6 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>1.18.22</version>
-            </dependency>
-            <dependency>
-                <groupId>org.yaml</groupId>
-                <artifactId>snakeyaml</artifactId>
-                <version>1.32</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
