--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,11 @@
 				<version>8.0.29</version>
 			</dependency>
 			<dependency>
+				<groupId>org.opengauss</groupId>
+				<artifactId>opengauss-jdbc</artifactId>
+				<version>3.1.1-og</version>
+			</dependency>
+			<dependency>
 				<groupId>com.baomidou</groupId>
 				<artifactId>mybatis-plus</artifactId>
 				<version>3.5.3.1</version>
