--- a/common/pom.xml
+++ b/common/pom.xml
@@ -93,5 +93,9 @@
 			<groupId>jakarta.annotation</groupId>
 			<artifactId>jakarta.annotation-api</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk18on</artifactId>
+		</dependency>
 	</dependencies>
 </project>
