--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,17 @@
 				<artifactId>spring-cloud-starter-zookeeper-config</artifactId>
 				<version>${spring-cloud-version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-starter-zookeeper-discovery</artifactId>
+				<version>${spring-cloud-version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>org.apache.zookeeper</groupId>
+						<artifactId>zookeeper</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
 			<!-- DB -->
 			<dependency>
 				<groupId>com.alibaba</groupId>
