--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 		<spring-version>6.1.11</spring-version>
 		<spring-cloud-version>4.1.2</spring-cloud-version>
 		<tomcat-version>10.1.26</tomcat-version>
+		<curator-version>5.6.0</curator-version>
 		<common-version>1.0.0-SNAPSHOT</common-version>
 	</properties>
 
@@ -219,6 +220,27 @@
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-pool2</artifactId>
 				<version>2.12.0</version>
+			</dependency>
+			<!-- curator -->
+			<dependency>
+				<groupId>org.apache.curator</groupId>
+				<artifactId>curator-framework</artifactId>
+				<version>${curator-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.curator</groupId>
+				<artifactId>curator-recipes</artifactId>
+				<version>${curator-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.curator</groupId>
+				<artifactId>curator-x-discovery</artifactId>
+				<version>${curator-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.curator</groupId>
+				<artifactId>curator-client</artifactId>
+				<version>${curator-version}</version>
 			</dependency>
 			<!-- 日志 -->
 			<dependency>
